# duq-mobile

./: .editorconfig  .gitignore  CLAUDE.md  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml  ios.yml
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/kotlin/com/duq/android/: DuqApplication.kt  MainActivity.kt
androidApp/src/main/kotlin/com/duq/android/di/: AppAndroidModule.kt
androidApp/src/main/kotlin/com/duq/android/service/: BootReceiver.kt  DuqAccessibilityService.kt  DuqListenerService.kt  DuqNotificationManager.kt  DuqVoiceInteractionService.kt  DuqVoiceInteractionSessionService.kt
androidApp/src/main/kotlin/com/duq/android/update/: UpdateWorker.kt
androidApp/src/main/res/values/: strings.xml
androidApp/src/main/res/xml/: accessibility_service_config.xml  voice_interaction_service.xml
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
app/src/main/java/com/duq/android/: MainActivity.kt
app/src/main/java/com/duq/android/audio/: ChatAudioPlaybackManager.kt  SentenceStreamer.kt  StreamingTts.kt  TtsLocal.kt  WavDecoder.kt  WhisperLocal.kt
app/src/main/res/values/: strings.xml
config/detekt/: detekt.yml
docs/superpowers/specs/: 2026-06-17-duq-control-panel-redesign-design.md
gradle/: libs.versions.toml
iosApp/iosApp/: Info.plist
iosApp/iosApp.xcodeproj/: project.pbxproj
shared/: build.gradle.kts
shared/src/commonMain/kotlin/com/duq/shared/: App.kt
shared/src/iosMain/kotlin/com/duq/shared/: MainViewController.kt
(+114 files in other folders)
